--- a/orders/templates/admin/orders/order/detail.html
+++ b/orders/templates/admin/orders/order/detail.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
 {% load static %}
 {% block extrastyle %}
-    <link rel="stylesheet" type="text/css" href="{% static "css/admin.css" %}" />
+    <link rel="stylesheet" type="text/css" href="{% static "css/admin.css" %}"/>
 {% endblock %}
 {% block title %}
     Order {{ order.id }} {{ block.super }}
@@ -70,9 +70,28 @@
                     </tr>
                 {% endfor %}
                 <tr class="total">
+                    <td colspan="4"></td>
+
+
+                </tr>
+                <tr class="total">
                     <td colspan="3">Total</td>
                     <td class="num">${{ order.get_total_cost }}</td>
+
                 </tr>
+                {% if order.coupon != None %}
+                    <tr>
+                        <td colspan="3">Coupon (-{{ order.discount }}%)</td>
+
+                        <td class="num">-${{ order.get_discount }}</td>
+                    </tr>
+
+                    <tr class="total">
+                        <td colspan="3">Total with coupon</td>
+                        <td class="num">${{ order.get_total_cost_after_discount }}</td>
+
+                    </tr>
+                {% endif %}
                 </tbody>
             </table>
         </div>
