--- a/orders/templates/orders/order/pdf.html
+++ b/orders/templates/orders/order/pdf.html
@@ -1,48 +1,61 @@
 <html>
 <body>
-  <h1>My Shop</h1>
-  <p>
+<h1>My Shop</h1>
+<p>
     Invoice no. {{ order.id }}</br>
     <span class="secondary">
       {{ order.created|date:"M d, Y" }}
     </span>
-  </p>
+</p>
 
-  <h3>Bill to</h3>
-  <p>
+<h3>Bill to</h3>
+<p>
     {{ order.first_name }} {{ order.last_name }}<br>
     {{ order.email }}<br>
     {{ order.address }}<br>
     {{ order.postal_code }}, {{ order.city }}
-  </p>
+</p>
 
-  <h3>Items bought</h3>
-  <table>
+<h3>Items bought</h3>
+<table>
     <thead>
-      <tr>
+    <tr>
         <th>Product</th>
         <th>Price</th>
         <th>Quantity</th>
         <th>Cost</th>
-      </tr>
+    </tr>
     </thead>
     <tbody>
-      {% for item in order.items.all %}
+    {% for item in order.items.all %}
         <tr class="row{% cycle "1" "2" %}">
-          <td>{{ item.product.name }}</td>
-          <td class="num">${{ item.price }}</td>
-          <td class="num">{{ item.quantity }}</td>
-          <td class="num">${{ item.get_cost }}</td>
+            <td>{{ item.product.name }}</td>
+            <td class="num">${{ item.price }}</td>
+            <td class="num">{{ item.quantity }}</td>
+            <td class="num">${{ item.get_cost }}</td>
         </tr>
-      {% endfor %}
-      <tr class="total">
+    {% endfor %}
+
+    <tr class="total">
         <td colspan="3">Total</td>
         <td class="num">${{ order.get_total_cost }}</td>
-      </tr>
-    </tbody>
-  </table>
+    </tr>
+    {% if order.coupon != None %}
+        <tr>
+            <td colspan="3">Coupon (-{{ order.discount }}%)</td>
+            <td class="num">-${{ order.get_discount }}</td>
+        </tr>
 
-  <span class="{% if order.paid %}paid{% else %}pending{% endif %}">
+        <tr class="total">
+            <td colspan="3">Total with coupon</td>
+            <td class="num">${{ order.get_total_cost_after_discount }}</td>
+
+        </tr>
+    {% endif %}
+    </tbody>
+</table>
+
+<span class="{% if order.paid %}paid{% else %}pending{% endif %}">
     {% if order.paid %}Paid{% else %}Pending payment{% endif %}
   </span>
 </body>
